app/components/paperShow/components/pdfSourceButton.scss
.downloadButton {
  display: flex;
  align-items: center;
  height: 40px;
  font-size: 14px;
  font-weight: 500;
  color: $main_blue0;
  line-height: 1.43;
  border-radius: 4px;

  .arrowIcon {
    @include flex-center-vertical-horizontal(flex);
    width: 24px;
    height: 24px;
    color: $gray4;

    svg {
      width: 14px;
      height: 8px;
    }
  }

  .sourceIcon,
  .pdfIconWrapper {
    @include flex-center-vertical-horizontal(inline-flex);
    width: 20px;
    height: 20px;
    margin-left: 10px;
    margin-right: 4px;

    svg {
      width: 16px;
      height: 12px;
      vertical-align: middle;
    }
  }
}

.dropdownBtn,
.linkClassName {
  background-color: $gray8;

  &:hover {
    background-color: $gray2;
  }

  &:active {
    filter: brightness(95%);
  }
}

.sourceButtonTextWrapper {
  width: 93px;
  margin-right: 10px;
  text-align: center;
}

@media (max-width: 1024px) {
  .downloadButton {
    width: 100%;
  }
}

